fix spacing for smaller screens

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,6 @@ p em {
 header {
   display: grid;
   grid-template-rows: 70% 30%;
-  justify-content: center;
 
   text-align: center;
   color: rgb(235, 171, 76);
@@ -87,7 +86,6 @@ header {
 }
 
 .top_nav nav li {
-  text-align: center;
   list-style: none;
   height: 3.5%;
 }
@@ -106,6 +104,7 @@ section {
   grid-template-rows: 1fr 14fr;
 
   background-color: rgba(235, 171, 76, 30%);
+  color: rgb(255, 255, 255);
 }
 
 .sec_nav nav {
@@ -168,19 +167,21 @@ section #work_exp,
   padding: 5% 0;
 
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  color: rgb(255, 255, 255);
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr auto;
 }
 
 div .title {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
   text-align: center;
-  min-width: 100px;
 }
 
 div .info {
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
   display: flex;
   flex-flow: wrap row;
-  justify-content: space-evenly;
 }
 
 .info div {
@@ -208,9 +209,23 @@ footer p {
 }
 
 @media screen and (min-width: 275px) and (max-width: 475px) {
+  html {
+    font-size: 12px;
+  }
+
   header {
-    margin-top: -55px;
+    margin: 15% 0;
     padding: 0 5%;
+  }
+
+  section {
+    background-color: rgba(255, 158, 12, 0.856);
+    color: black;
+  }
+
+  .top_nav {
+    margin-right: 7%;
+    padding-bottom: 65%;
   }
 
   .content {
@@ -218,16 +233,25 @@ footer p {
     grid-column: 1 / span 2;
   }
 
+  div .title {
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+    text-align: left;
+  }
+
   div .info {
-    display: flex;
-    flex-flow: wrap column;
+    grid-column: 1 / span 2;
+    grid-row: 2 / span 1;
   }
 
   .info div {
-    width: 75%;
+    width: 90%;
     margin: 1% 3%;
   }
 
+  #contact .info div {
+    width: 90%;
+  }
   .sec_nav nav {
     display: none;
   }
